[package]
name = "wifi-nostd"
version = "0.1.0"
edition = "2021"
authors = ["Matt Gates <matt@ridgecellrepair.com>"]
license = "MIT OR Apache-2.0"
description = "no_std Intel WiFi driver (AX201/AX200/AX210/AC9260) with WPA2 in Rust"
repository = "https://github.com/suhteevah/wifi-nostd"
keywords = ["wifi", "intel", "wireless", "no_std", "bare-metal"]
categories = ["no-std", "hardware-support", "embedded"]
readme = "README.md"

[dependencies]
log = { version = "0.4", default-features = false }
spin = { version = "0.9", default-features = false }
